// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1599.8181667894016,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1599.8181667894016,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 573.9063558965418,
      "y": 4,
      "z": 1.9713612693307425,
    },
    "isLeaf": false,
    "length": 879.8999917341708,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 573.9063558965418,
      "y": 4,
      "z": 441.9213571364162,
    },
    "path": "/root/src",
    "visible": true,
    "width": 559.9363583762905,
    "x0": 543.9381767083966,
    "y0": 31.996363335788033,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 525.2624826332633,
      "y": 6,
      "z": -45.46907918221834,
    },
    "isLeaf": false,
    "length": 577.5393712380569,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 525.2624826332633,
      "y": 6,
      "z": 243.3006064368101,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 425.5866131729499,
    "x0": 562.4691760467883,
    "y0": 60.146078008267445,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 418.8658293400258,
      "y": 6,
      "z": 524.7909021581415,
    },
    "isLeaf": false,
    "length": 217.9114764786758,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 631.6591359265008,
      "y": 6,
      "z": 524.7909021581415,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 425.5866131729499,
    "x0": 562.4691760467883,
    "y0": 665.8351639188037,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 405.20886889011734,
      "y": 506,
      "z": -31.394221845978677,
    },
    "isLeaf": true,
    "length": 521.2399418930979,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 405.20886889011734,
      "y": 506,
      "z": 229.22574910057028,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 148.41738700987446,
    "x0": 581.0001753851801,
    "y0": 88.29579268074686,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 572.1572552383834,
      "y": 506,
      "z": -31.394221845978677,
    },
    "isLeaf": true,
    "length": 521.2399418930979,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 572.1572552383834,
      "y": 506,
      "z": 229.22574910057028,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 148.41738700987423,
    "x0": 747.9485617334464,
    "y0": 88.29579268074686,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 409.8416187247152,
      "y": 506,
      "z": 524.7909021581415,
    },
    "isLeaf": true,
    "length": 161.61204713371683,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 567.5245054037854,
      "y": 506,
      "z": 524.7909021581415,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 315.36577335814036,
    "x0": 581.0001753851801,
    "y0": 693.9848785912832,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 269.94090420655556,
      "y": 4,
      "z": 949.8636250920512,
    },
    "isLeaf": false,
    "length": 479.9454500368204,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 669.895445903906,
      "y": 4,
      "z": 949.8636250920512,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 799.9090833947009,
    "x0": 319.9636333578803,
    "y0": 959.890900073641,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 125.9572691955094,
      "y": 6,
      "z": 767.4843540780594,
    },
    "isLeaf": false,
    "length": 95.9890900073641,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 205.9481775349795,
      "y": 6,
      "z": 767.4843540780594,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 159.98181667894022,
    "x0": 335.96181502577434,
    "y0": 969.4898090743774,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 136.71370419310023,
      "y": 506,
      "z": 746.8286837673206,
    },
    "isLeaf": true,
    "length": 82.62268124295531,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 136.71370419310023,
      "y": 506,
      "z": 788.1400243887982,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 79.22643039397042,
    "x0": 347.100488996115,
    "y0": 976.1730134565818,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 581.905446730489,
      "y": 6,
      "z": 1074.6494421016246,
    },
    "isLeaf": false,
    "length": 230.3738160176738,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 773.8836267452172,
      "y": 6,
      "z": 1074.6494421016246,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 383.9563600294564,
    "x0": 735.9163567231249,
    "y0": 1209.4625340927876,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 529.6481930903258,
      "y": 506,
      "z": 988.4108716704753,
    },
    "isLeaf": true,
    "length": 79.41823661277931,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 529.6481930903258,
      "y": 506,
      "z": 1028.1199899768649,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 57.15107798609233,
    "x0": 751.0726540972796,
    "y0": 1218.5563125172805,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 601.955568450573,
      "y": 506,
      "z": 988.4108716704753,
    },
    "isLeaf": true,
    "length": 79.41823661277931,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 601.955568450573,
      "y": 506,
      "z": 1028.1199899768649,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 57.15107798609233,
    "x0": 823.3800294575268,
    "y0": 1218.5563125172805,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 674.2629438108202,
      "y": 506,
      "z": 988.4108716704753,
    },
    "isLeaf": true,
    "length": 79.41823661277931,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 674.2629438108202,
      "y": 506,
      "z": 1028.1199899768649,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 57.15107798609233,
    "x0": 895.687404817774,
    "y0": 1218.5563125172805,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 746.5703191710675,
      "y": 506,
      "z": 988.4108716704753,
    },
    "isLeaf": true,
    "length": 79.41823661277931,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 746.5703191710675,
      "y": 506,
      "z": 1028.1199899768649,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 57.151077986092446,
    "x0": 967.9947801780212,
    "y0": 1218.5563125172805,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 533.4372674338645,
      "y": 506,
      "z": 1074.6494421016246,
    },
    "isLeaf": true,
    "length": 35.16222909414341,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 598.1664941070343,
      "y": 506,
      "z": 1074.6494421016246,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 129.45845334633952,
    "x0": 751.0726540972796,
    "y0": 1307.0683275545528,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 533.4372674338645,
      "y": 506,
      "z": 1118.9054496202607,
    },
    "isLeaf": true,
    "length": 35.16222909414341,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 598.1664941070343,
      "y": 506,
      "z": 1118.9054496202607,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 129.45845334633952,
    "x0": 751.0726540972796,
    "y0": 1351.3243350731889,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 533.4372674338645,
      "y": 506,
      "z": 1163.1614571388968,
    },
    "isLeaf": true,
    "length": 35.162229094143186,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 598.1664941070343,
      "y": 506,
      "z": 1163.1614571388968,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 129.45845334633952,
    "x0": 751.0726540972796,
    "y0": 1395.5803425918252,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 674.2629438108202,
      "y": 506,
      "z": 1076.9228867077477,
    },
    "isLeaf": true,
    "length": 79.41823661277954,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 674.2629438108202,
      "y": 506,
      "z": 1116.6320050141373,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 57.15107798609233,
    "x0": 895.687404817774,
    "y0": 1307.0683275545528,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 746.5703191710675,
      "y": 506,
      "z": 1076.9228867077477,
    },
    "isLeaf": true,
    "length": 79.41823661277954,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 746.5703191710675,
      "y": 506,
      "z": 1116.6320050141373,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 57.151077986092446,
    "x0": 967.9947801780212,
    "y0": 1307.0683275545528,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 678.0520181543588,
      "y": 506,
      "z": 1163.1614571388968,
    },
    "isLeaf": true,
    "length": 35.162229094143186,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 742.7812448275288,
      "y": 506,
      "z": 1163.1614571388968,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 129.45845334633964,
    "x0": 895.687404817774,
    "y0": 1395.5803425918252,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1178.8225099390856,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1178.8225099390856,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 103.64675298172571,
      "y": 4,
      "z": 44.70562748477144,
    },
    "isLeaf": false,
    "length": 707.2935059634515,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 103.64675298172571,
      "y": 4,
      "z": 398.35238046649715,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 471.5290039756343,
    "x0": 117.88225099390857,
    "y0": 117.88225099390857,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 9.340952186598855,
      "y": 6,
      "z": 115.43497808111658,
    },
    "isLeaf": false,
    "length": 353.64675298172574,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 197.95255377685257,
      "y": 6,
      "z": 115.43497808111658,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 377.2232031805074,
    "x0": 165.035151391472,
    "y0": 188.6116015902537,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 47.02358606639942,
      "y": 506,
      "z": 38.1266350786847,
    },
    "isLeaf": true,
    "length": 309.2333720097273,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": 47.02358606639942,
      "y": 506,
      "z": 192.74332108354835,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 220.83540884293956,
    "x0": 186.60588164492964,
    "y0": 210.81829207625287,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 268.6819043731977,
      "y": 6,
      "z": 380.6700428174109,
    },
    "isLeaf": false,
    "length": 70.72935059634506,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 268.6819043731977,
      "y": 6,
      "z": 416.0347181155834,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 47.152900397563485,
    "x0": 495.10545417441597,
    "y0": 612.9877051683246,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 259.73975385173287,
      "y": 506,
      "z": 383.2249429664008,
    },
    "isLeaf": true,
    "length": 60.50975000038534,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 259.73975385173287,
      "y": 506,
      "z": 413.4798179665935,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 22.455532290660585,
    "x0": 498.5119877064026,
    "y0": 618.0975054663045,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 15.235064736294305,
      "y": 4,
      "z": 751.9991334482229,
    },
    "isLeaf": false,
    "length": 117.88225099390866,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 309.9406922210658,
      "y": 4,
      "z": 751.9991334482229,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 589.4112549695429,
    "x0": 117.88225099390857,
    "y0": 943.0580079512686,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -14.83649529682961,
      "y": 502,
      "z": 751.9991334482229,
    },
    "isLeaf": true,
    "length": 100.8495833339756,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 145.7037105016968,
      "y": 502,
      "z": 751.9991334482229,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 321.08041159705283,
    "x0": 154.89340180390718,
    "y0": 951.5743417812351,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": -101,
    },
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": 197,
    },
    "path": "/root",
    "visible": true,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143.1384387633061,
      "y": 2,
      "z": -53.430780618346944,
    },
    "isLeaf": false,
    "length": 786.2768775266122,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 143.1384387633061,
      "y": 2,
      "z": 339.70765814495917,
    },
    "path": "/root",
    "visible": true,
    "width": 786.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 92.73843876330608,
      "y": 4,
      "z": -43.83078061834698,
    },
    "isLeaf": true,
    "length": 747.8768775266121,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 92.73843876330608,
      "y": 4,
      "z": 330.1076581449591,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 647.0768775266122,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -69.03078061834697,
      "y": 502,
      "z": 526.6768775266122,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 254.50765814495912,
      "y": 502,
      "z": 526.6768775266122,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 647.0768775266122,
    "x0": 19.200000000000003,
    "y0": 776.6768775266122,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 225.07550765359252,
      "y": 2,
      "z": -12.462246173203738,
    },
    "isLeaf": false,
    "length": 950.151015307185,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 225.07550765359252,
      "y": 2,
      "z": 462.6132614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 950.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -32.862246173203744,
      "y": 4,
      "z": -2.862246173203772,
    },
    "isLeaf": true,
    "length": 911.751015307185,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -32.862246173203744,
      "y": 4,
      "z": 453.01326148038873,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 395.87550765359254,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 382.21326148038884,
      "y": 4,
      "z": -2.862246173203772,
    },
    "isLeaf": false,
    "length": 911.751015307185,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 382.21326148038884,
      "y": 4,
      "z": 453.01326148038873,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 395.8755076535925,
    "x0": 434.27550765359257,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 273.8943845669907,
      "y": 6,
      "z": -87.31734770392224,
    },
    "isLeaf": true,
    "length": 248.5653045921555,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 414.73213839378695,
      "y": 6,
      "z": -87.31734770392224,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 281.67550765359243,
    "x0": 453.4755076535926,
    "y0": 38.400000000000006,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 344.31326148038886,
      "y": 6,
      "z": 207.5617322709129,
    },
    "isLeaf": true,
    "length": 605.5857107150293,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 344.31326148038886,
      "y": 6,
      "z": 510.35458762842757,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 281.67550765359243,
    "x0": 453.4755076535926,
    "y0": 306.16530459215556,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 273.8943845669907,
      "y": 504,
      "z": 671.351015307185,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 414.73213839378695,
      "y": 504,
      "z": 671.351015307185,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 281.67550765359243,
    "x0": 453.4755076535926,
    "y0": 921.351015307185,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should build the tree map with valid coordinates using the fixed folder structure 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1573.3126291998992,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1573.3126291998992,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 44.996117974981104,
      "y": 4,
      "z": -53.33592135001261,
    },
    "isLeaf": false,
    "length": 235.99689437998487,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1",
    "outgoingEdgePoint": Vector3 {
      "x": 477.6570910049534,
      "y": 4,
      "z": -53.33592135001261,
    },
    "path": "/root/folder_1",
    "visible": true,
    "width": 865.3219460599446,
    "x0": 78.66563145999496,
    "y0": 78.66563145999496,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 2,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -148.69924406541247,
      "y": 504,
      "z": -105.40679575220194,
    },
    "isLeaf": true,
    "length": 208.28349760875727,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_1",
    "outgoingEdgePoint": Vector3 {
      "x": -148.69924406541247,
      "y": 504,
      "z": -1.2650469478232935,
    },
    "path": "/root/folder_1/children_1",
    "visible": true,
    "width": 0,
    "x0": 101.30075593458751,
    "y0": 92.52232984560875,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -148.69924406541247,
      "y": 504,
      "z": -105.40679575220194,
    },
    "isLeaf": true,
    "length": 208.28349760875727,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_2",
    "outgoingEdgePoint": Vector3 {
      "x": -148.69924406541247,
      "y": 504,
      "z": -1.2650469478232935,
    },
    "path": "/root/folder_1/children_2",
    "visible": true,
    "width": 0,
    "x0": 101.30075593458751,
    "y0": 92.52232984560875,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -148.69924406541247,
      "y": 504,
      "z": -105.40679575220194,
    },
    "isLeaf": true,
    "length": 208.28349760875727,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_3",
    "outgoingEdgePoint": Vector3 {
      "x": -148.69924406541247,
      "y": 504,
      "z": -1.2650469478232935,
    },
    "path": "/root/folder_1/children_3",
    "visible": true,
    "width": 0,
    "x0": 101.30075593458751,
    "y0": 92.52232984560875,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 25.329710109982358,
      "y": 4,
      "z": 339.99223594996226,
    },
    "isLeaf": false,
    "length": 786.6563145999497,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2",
    "outgoingEdgePoint": Vector3 {
      "x": 25.329710109982358,
      "y": 4,
      "z": 733.3203932499371,
    },
    "path": "/root/folder_2",
    "visible": true,
    "width": 393.3281572999748,
    "x0": 78.66563145999496,
    "y0": 393.3281572999748,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -159.20384879153147,
      "y": 504,
      "z": 362.44962486027134,
    },
    "isLeaf": true,
    "length": 696.8267589587131,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_4",
    "outgoingEdgePoint": Vector3 {
      "x": -159.20384879153147,
      "y": 504,
      "z": 710.8630043396279,
    },
    "path": "/root/folder_2/children_4",
    "visible": true,
    "width": 0,
    "x0": 90.79615120846853,
    "y0": 438.2429351205931,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -159.20384879153147,
      "y": 504,
      "z": 362.44962486027134,
    },
    "isLeaf": true,
    "length": 696.8267589587131,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": -159.20384879153147,
      "y": 504,
      "z": 710.8630043396279,
    },
    "path": "/root/folder_2/children_5",
    "visible": true,
    "width": 0,
    "x0": 90.79615120846853,
    "y0": 438.2429351205931,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 497.3234988699522,
      "y": 4,
      "z": 339.99223594996226,
    },
    "isLeaf": false,
    "length": 786.6563145999497,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_3",
    "outgoingEdgePoint": Vector3 {
      "x": 497.3234988699522,
      "y": 4,
      "z": 733.3203932499371,
    },
    "path": "/root/folder_3",
    "visible": true,
    "width": 393.3281572999748,
    "x0": 550.6594202199648,
    "y0": 393.3281572999748,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.7899399684384,
      "y": 504,
      "z": 362.44962486027134,
    },
    "isLeaf": true,
    "length": 696.8267589587131,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_6",
    "outgoingEdgePoint": Vector3 {
      "x": 312.7899399684384,
      "y": 504,
      "z": 710.8630043396279,
    },
    "path": "/root/folder_3/children_6",
    "visible": true,
    "width": 0,
    "x0": 562.7899399684384,
    "y0": 438.2429351205931,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 312.7899399684384,
      "y": 504,
      "z": 362.44962486027134,
    },
    "isLeaf": true,
    "length": 696.8267589587131,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_7",
    "outgoingEdgePoint": Vector3 {
      "x": 312.7899399684384,
      "y": 504,
      "z": 710.8630043396279,
    },
    "path": "/root/folder_3/children_7",
    "visible": true,
    "width": 0,
    "x0": 562.7899399684384,
    "y0": 438.2429351205931,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 851.3188404399295,
      "y": 4,
      "z": 182.66097302997227,
    },
    "isLeaf": false,
    "length": 1415.9813662799093,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_4",
    "outgoingEdgePoint": Vector3 {
      "x": 851.3188404399295,
      "y": 4,
      "z": 890.6516561699268,
    },
    "path": "/root/folder_4",
    "visible": true,
    "width": 157.33126291998997,
    "x0": 1022.6532089799346,
    "y0": 78.66563145999496,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 20,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 777.7510760043235,
      "y": 504,
      "z": 218.78708634748725,
    },
    "isLeaf": true,
    "length": 1271.4769130098487,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_8",
    "outgoingEdgePoint": Vector3 {
      "x": 777.7510760043235,
      "y": 504,
      "z": 854.5255428524116,
    },
    "path": "/root/folder_4/children_8",
    "visible": true,
    "width": 0,
    "x0": 1027.7510760043235,
    "y0": 150.91785809502508,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 777.7510760043235,
      "y": 504,
      "z": 218.78708634748725,
    },
    "isLeaf": true,
    "length": 1271.4769130098487,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_9",
    "outgoingEdgePoint": Vector3 {
      "x": 777.7510760043235,
      "y": 504,
      "z": 854.5255428524116,
    },
    "path": "/root/folder_4/children_9",
    "visible": true,
    "width": 0,
    "x0": 1027.7510760043235,
    "y0": 150.91785809502508,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1126.6485505499118,
      "y": 4,
      "z": 182.66097302997227,
    },
    "isLeaf": false,
    "length": 1415.9813662799093,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_5",
    "outgoingEdgePoint": Vector3 {
      "x": 1126.6485505499118,
      "y": 4,
      "z": 890.6516561699268,
    },
    "path": "/root/folder_5",
    "visible": true,
    "width": 235.99689437998495,
    "x0": 1258.6501033599193,
    "y0": 78.66563145999496,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1016.1699973678749,
      "y": 504,
      "z": 218.78708634748725,
    },
    "isLeaf": true,
    "length": 1271.4769130098487,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_10",
    "outgoingEdgePoint": Vector3 {
      "x": 1016.1699973678749,
      "y": 504,
      "z": 854.5255428524116,
    },
    "path": "/root/folder_5/children_10",
    "visible": true,
    "width": 0,
    "x0": 1266.1699973678749,
    "y0": 150.91785809502508,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1016.1699973678749,
      "y": 504,
      "z": 218.78708634748725,
    },
    "isLeaf": true,
    "length": 1271.4769130098487,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_11",
    "outgoingEdgePoint": Vector3 {
      "x": 1016.1699973678749,
      "y": 504,
      "z": 854.5255428524116,
    },
    "path": "/root/folder_5/children_11",
    "visible": true,
    "width": 0,
    "x0": 1266.1699973678749,
    "y0": 150.91785809502508,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 44.996117974981075,
      "y": 4,
      "z": 1126.6485505499118,
    },
    "isLeaf": false,
    "length": 235.99689437998495,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_6",
    "outgoingEdgePoint": Vector3 {
      "x": 477.6570910049534,
      "y": 4,
      "z": 1126.6485505499118,
    },
    "path": "/root/folder_6",
    "visible": true,
    "width": 865.3219460599445,
    "x0": 78.66563145999496,
    "y0": 1258.6501033599193,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -146.99316282345984,
      "y": 504,
      "z": 1075.169220962871,
    },
    "isLeaf": true,
    "length": 205.9173183481637,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_12",
    "outgoingEdgePoint": Vector3 {
      "x": -146.99316282345984,
      "y": 504,
      "z": 1178.1278801369529,
    },
    "path": "/root/folder_6/children_12",
    "visible": true,
    "width": 0,
    "x0": 103.00683717654016,
    "y0": 1273.68989137583,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -146.99316282345984,
      "y": 504,
      "z": 1075.169220962871,
    },
    "isLeaf": true,
    "length": 205.9173183481637,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_13",
    "outgoingEdgePoint": Vector3 {
      "x": -146.99316282345984,
      "y": 504,
      "z": 1178.1278801369529,
    },
    "path": "/root/folder_6/children_13",
    "visible": true,
    "width": 0,
    "x0": 103.00683717654016,
    "y0": 1273.68989137583,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should disable floor labels if option is toggled and change size 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": -66.21224617320374,
    },
    "isLeaf": false,
    "length": 735.151015307185,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": 301.3632614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 735.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -56.61224617320377,
      "y": 4,
      "z": -61.412246173203755,
    },
    "isLeaf": true,
    "length": 338.7755076535925,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 291.76326148038873,
      "y": 4,
      "z": -61.412246173203755,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -56.61224617320377,
      "y": 4,
      "z": 296.56326148038875,
    },
    "isLeaf": false,
    "length": 338.77550765359246,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 291.76326148038873,
      "y": 4,
      "z": 296.56326148038875,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 377.17550765359255,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -119.56734770392222,
      "y": 6,
      "z": 221.4693845669907,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -119.56734770392222,
      "y": 6,
      "z": 371.65713839378685,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 184.06530459215554,
    "x0": 38.400000000000006,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 105.4367322709129,
      "y": 6,
      "z": 296.56326148038875,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 332.97958762842757,
      "y": 6,
      "z": 296.56326148038875,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 455.08571071502945,
    "x0": 241.66530459215554,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 456.351015307185,
      "y": 504,
      "z": 221.4693845669907,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 456.351015307185,
      "y": 504,
      "z": 371.65713839378685,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 0,
    "x0": 706.351015307185,
    "y0": 396.3755076535926,
    "z0": 4,
  },
]
`;
